== 2.3.3 ==
Release date: April 14, 2021
* Fixed: Team Member - Dynamic image tag was not working

== 2.3.2 ==
Release date: April 7, 2021
* Added: Content Ticker - Pause on Interaction option
* Added: Content Ticker - Heading alignment and padding options
* Enhancement: Content Ticker, Logo Carousel - Updated arrows control
* Enhancement: Instagram Feed - Updated autoplay speed control type to number control
* Enhancement: Instagram Feed - Removed Use API option as it was not working any more
* Added: Gravity Forms - Label spacing option
* Fixed: Sanitized and escaped data to enforce better security

== 2.3.1 ==
Release date: March 29, 2021
* Fixed: Flip Box - Link option was not working in zoom out effect
* Fixed: Info Box Carousel, Logo Carousel - Fade, Cube and Flip effects
* Fixed: Posts - Dynamic tag was not working for Read More Button text
* Added: Posts - Option to open read more button in new tab
* Added: Posts - Read More Button Icon Spacing option
* Enhancement: Posts - Updated Read More Button Icon control
* Enhancement: Added support for Elementor Improved Assets Loading feature

== 2.3.0 ==
Release date: March 22, 2021
* New: Random Image widget
* Fixed: Info Box - Responsive Icon Position control was not working
* Fixed: Display Conditions - Day of the Week option was not working for Sunday
* Fixed: Gravity forms was enqueuing all scripts and styles on frontend

== 2.2.5 ==
Release date: February 23, 2021
* Added: Image Hotspots - Z-index option for tooltips
* Enhancement: Pricing Table - Added pointer cursor if click trigger is used for tooltip
* Fixed: Pricing Table - If tooltip content is left blank it was showing content from previous item's tooltip content
* Added: Pricing Table - Settings to change color and size for tooltip icon
* Fixed: Pricing Table - Tooltip icon was showing even if there was no tooltip content

== 2.2.4 ==
Release date: February 10, 2021
* Fixed: Instagram Feed – Added compatibility with new Instagram API changes
