@@ -601,7 +601,7 @@ class Dual_Heading extends Powerpack_Widget {
 	 *
 	 * @access protected
 	 */
-	protected function _content_template() { // phpcs:ignore PSR2.Methods.MethodDeclaration.Underscore
+	protected function content_template() { // phpcs:ignore PSR2.Methods.MethodDeclaration.Underscore
 		?>
 		<{{{settings.heading_html_tag}}} class="pp-dual-heading">
 			<# if ( settings.link.url ) { #><a href="{{settings.link.url}}"><# } #>
@@ -633,5 +633,19 @@ class Dual_Heading extends Powerpack_Widget {
 			<# if ( settings.link.url ) { #></a><# } #>
 		</{{{settings.heading_html_tag}}}>
 		<?php
+	}
+
+	/**
+	 * Render dual heading widget output in the editor.
+	 *
+	 * Written as a Backbone JavaScript template and used to generate the live preview.
+	 *
+	 * Remove this after Elementor v3.3.0
+	 *
+	 * @since 1.0.0
+	 * @access protected
+	 */
+	protected function _content_template() { // phpcs:ignore PSR2.Methods.MethodDeclaration.Underscore
+		$this->content_template();
 	}
 }
