@@ -1,30 +1,30 @@
 <?php
-	namespace PowerpackElementsLite\Modules\TeamMember\Widgets;
+namespace PowerpackElementsLite\Modules\TeamMember\Widgets;
 
-	use PowerpackElementsLite\Base\Powerpack_Widget;
-	use PowerpackElementsLite\Classes\PP_Helper;
+use PowerpackElementsLite\Base\Powerpack_Widget;
+use PowerpackElementsLite\Classes\PP_Helper;
 
-	// Elementor Classes
-	use Elementor\Controls_Manager;
-	use Elementor\Utils;
-	use Elementor\Icons_Manager;
-	use Elementor\Repeater;
-	use Elementor\Group_Control_Image_Size;
-	use Elementor\Group_Control_Background;
-	use Elementor\Group_Control_Box_Shadow;
-	use Elementor\Group_Control_Border;
-	use Elementor\Group_Control_Typography;
-	use Elementor\Core\Schemes\Typography as Scheme_Typography;
-	use Elementor\Core\Schemes\Color as Scheme_Color;
-	use Elementor\Modules\DynamicTags\Module as TagsModule;
+// Elementor Classes
+use Elementor\Controls_Manager;
+use Elementor\Utils;
+use Elementor\Icons_Manager;
+use Elementor\Repeater;
+use Elementor\Group_Control_Image_Size;
+use Elementor\Group_Control_Background;
+use Elementor\Group_Control_Box_Shadow;
+use Elementor\Group_Control_Border;
+use Elementor\Group_Control_Typography;
+use Elementor\Core\Schemes\Typography as Scheme_Typography;
+use Elementor\Core\Schemes\Color as Scheme_Color;
+use Elementor\Modules\DynamicTags\Module as TagsModule;
 
 if ( ! defined( 'ABSPATH' ) ) {
 	exit; // Exit if accessed directly.
 }
 
-	/**
-	 * Team Member Widget
-	 */
+/**
+ * Team Member Widget
+ */
 class Team_Member extends Powerpack_Widget {
 
 	/**
